--- a/project/templates/project/index.html
+++ b/project/templates/project/index.html
@@ -365,6 +365,40 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
+              <img src="{% static "project/img/Rohan.JPEG" %}" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Rohan Choudhury</h4>
+                  <span>Graphic Designer</span>
+                  <div class="social">
+                    <a href="mailto:rohanchoudhury@ieee.org"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.facebook.com/rohuunn"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/rohanc2000/"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="member">
+              <img src="{% static "project/img/Soumik.JPG" %}" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Soumik Paul</h4>
+                  <span>Web Developer</span>
+                  <div class="social">
+                    <a href="mailto:soumikpaul1999@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.facebook.com/soumik.paul.503"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/soumik-paul-6b46b2172/"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="member">
               <img src="{% static "project/img/khushi.JPG" %}" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
@@ -380,7 +414,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+          <div class="col-lg-3 col-md-6 wow fadeInUp" >
             <div class="member">
               <img src="{% static "project/img/shalini.JPG" %}" class="img-fluid" alt="">
               <div class="member-info">
@@ -397,9 +431,9 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="{% static "project/img/mohit.JPG" %}" class="img-fluid" alt="">
+              <img src="{% static "project/img/Mohit.JPEG" %}" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Mohit Kochar</h4>
@@ -408,6 +442,23 @@
                     <a href="mailto:mohitkochar0203@gmail.com"><i class="fa fa-envelope"></i></a>
                     <a href="https://www.facebook.com/mohit.kochar.12"><i class="fa fa-facebook"></i></a>
                     <a href="https://www.linkedin.com/in/mohit-kochar-2143aa179/"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="member">
+              <img src="{% static "project/img/Pritish.JPG" %}" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Pritish Singhal</h4>
+                  <span>Web Developer</span>
+                  <div class="social">
+                    <a href="mailto:oritishsinghal08@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.facebook.com/pritish.singhal.5"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/pritish-singhal-4a0b29169/"><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
