resolve conflict issue 20 -1

--- a/project/templates/project/index.html
+++ b/project/templates/project/index.html
@@ -456,7 +456,7 @@
                   <h4>Pritish Singhal</h4>
                   <span>Web Developer</span>
                   <div class="social">
-                    <a href="mailto:oritishsinghal08@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:pritishsinghal08@gmail.com"><i class="fa fa-envelope"></i></a>
                     <a href="https://www.facebook.com/pritish.singhal.5"><i class="fa fa-facebook"></i></a>
                     <a href="https://www.linkedin.com/in/pritish-singhal-4a0b29169/"><i class="fa fa-linkedin"></i></a>
                   </div>
